update blood hunter data

--- a/pages/blood_hunter.html
+++ b/pages/blood_hunter.html
@@ -3,80 +3,83 @@
     <h1 id='血獵者-blood-hunter'><span>血獵者 Blood Hunter</span></h1>
     <h5 id='by-matt-mercer--art-by-joma-cueto'><span>By Matt Mercer | Art by Joma Cueto</span></h5>
     <div class='md-toc' mdtype='toc'>
-      <p class="md-toc-content" role="list"><span role="listitem" class="md-toc-item md-toc-h1" data-ref="n1349"><a
+      <p class="md-toc-content" role="list"><span role="listitem" class="md-toc-item md-toc-h1" data-ref="n0"><a
             class="md-toc-inner" href="#血獵者-blood-hunter">血獵者 Blood Hunter</a></span><span role="listitem"
-          class="md-toc-item md-toc-h5" data-ref="n1351"><a class="md-toc-inner"
+          class="md-toc-item md-toc-h5" data-ref="n2"><a class="md-toc-inner"
             href="#by-matt-mercer--art-by-joma-cueto">By Matt Mercer | Art by Joma Cueto</a></span><span role="listitem"
-          class="md-toc-item md-toc-h3" data-ref="n1357"><a class="md-toc-inner" href="#血獵者-the-blood-hunter">血獵者 The
-            Blood Hunter</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n1486"><a
-            class="md-toc-inner" href="#職業特性-class-features">職業特性
-            Class Features</a></span><span role="listitem" class="md-toc-item md-toc-h5" data-ref="n1487"><a
-            class="md-toc-inner" href="#生命值-hit-points">生命值 Hit Points</a></span><span role="listitem"
-          class="md-toc-item md-toc-h5" data-ref="n1489"><a class="md-toc-inner" href="#熟練項-proficiencies">熟練項
-            Proficiencies</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n1491"><a
-            class="md-toc-inner" href="#裝備-equipment">裝備 Equipment</a></span><span role="listitem"
-          class="md-toc-item md-toc-h4" data-ref="n1502"><a class="md-toc-inner" href="#獵人變異-hunters-bane">獵人變異
-            Hunter's Bane</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n1508"><a
-            class="md-toc-inner" href="#血源詛咒-blood-maledict">血源詛咒 Blood Maledict</a></span><span role="listitem"
-          class="md-toc-item md-toc-h4" data-ref="n1546"><a class="md-toc-inner" href="#戰鬥風格fighting-style">戰鬥風格Fighting
-            Style</a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n1548"><a class="md-toc-inner"
-            href="#箭術-archery"><strong>箭術
-              Archery</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n1550"><a
-            class="md-toc-inner" href="#決鬥-dueling"><strong>決鬥 Dueling</strong></a></span><span role="listitem"
-          class="md-toc-item md-toc-h6" data-ref="n1552"><a class="md-toc-inner"
+          class="md-toc-item md-toc-h3" data-ref="n11"><a class="md-toc-inner" href="#血獵者-the-blood-hunter">血獵者 The
+            Blood Hunter</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n140"><a
+            class="md-toc-inner" href="#職業特性-class-features">職業特性 Class Features</a></span><span role="listitem"
+          class="md-toc-item md-toc-h5" data-ref="n141"><a class="md-toc-inner" href="#生命值-hit-points">生命值 Hit
+            Points</a></span><span role="listitem" class="md-toc-item md-toc-h5" data-ref="n143"><a class="md-toc-inner"
+            href="#熟練項-proficiencies">熟練項 Proficiencies</a></span><span role="listitem" class="md-toc-item md-toc-h4"
+          data-ref="n145"><a class="md-toc-inner" href="#裝備-equipment">裝備 Equipment</a></span><span role="listitem"
+          class="md-toc-item md-toc-h4" data-ref="n156"><a class="md-toc-inner" href="#獵人變異-hunters-bane">獵人變異 Hunter's
+            Bane</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n162"><a class="md-toc-inner"
+            href="#血源詛咒-blood-maledict">血源詛咒 Blood Maledict</a></span><span role="listitem"
+          class="md-toc-item md-toc-h4" data-ref="n200"><a class="md-toc-inner" href="#戰鬥風格fighting-style">戰鬥風格Fighting
+            Style</a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n202"><a class="md-toc-inner"
+            href="#箭術-archery"><strong>箭術 Archery</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6"
+          data-ref="n204"><a class="md-toc-inner" href="#決鬥-dueling"><strong>決鬥 Dueling</strong></a></span><span
+          role="listitem" class="md-toc-item md-toc-h6" data-ref="n206"><a class="md-toc-inner"
             href="#巨武戰鬥-great-weapon-fighting"><strong>巨武戰鬥 Great Weapon Fighting</strong></a></span><span
-          role="listitem" class="md-toc-item md-toc-h6" data-ref="n1554"><a class="md-toc-inner"
+          role="listitem" class="md-toc-item md-toc-h6" data-ref="n208"><a class="md-toc-inner"
             href="#雙武器戰鬥two-weapon-fighting"><strong>雙武器戰鬥Two-Weapon Fighting</strong></a></span><span role="listitem"
-          class="md-toc-item md-toc-h4" data-ref="n1556"><a class="md-toc-inner" href="#猩紅儀式-crimson-rite">猩紅儀式
-            Crimson Rite</a></span><span role="listitem" class="md-toc-item md-toc-h5" data-ref="n1558"><a
-            class="md-toc-inner" href="#基礎血儀primal-rites"><strong>基礎血儀Primal Rites</strong></a></span><span
-          role="listitem" class="md-toc-item md-toc-h5" data-ref="n1561"><a class="md-toc-inner"
+          class="md-toc-item md-toc-h4" data-ref="n210"><a class="md-toc-inner" href="#猩紅儀式-crimson-rite">猩紅儀式 Crimson
+            Rite</a></span><span role="listitem" class="md-toc-item md-toc-h5" data-ref="n212"><a class="md-toc-inner"
+            href="#基礎血儀primal-rites"><strong>基礎血儀Primal Rites</strong></a></span><span role="listitem"
+          class="md-toc-item md-toc-h5" data-ref="n222"><a class="md-toc-inner"
             href="#秘傳血儀esoteric-rites"><strong>秘傳血儀Esoteric Rites</strong></a></span><span role="listitem"
-          class="md-toc-item md-toc-h4" data-ref="n1570"><a class="md-toc-inner" href="#血獵者之序-blood-hunter-order">血獵者之序
-            Blood Hunter Order</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n1575"><a
+          class="md-toc-item md-toc-h4" data-ref="n232"><a class="md-toc-inner" href="#血獵者之序-blood-hunter-order">血獵者之序
+            Blood Hunter Order</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n235"><a
             class="md-toc-inner" href="#屬性值提升-ability-score-improvement">屬性值提升 Ability Score Improvement</a></span><span
-          role="listitem" class="md-toc-item md-toc-h4" data-ref="n1577"><a class="md-toc-inner"
-            href="#額外攻擊-extra-attack">額外攻擊 Extra
-            Attack</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n1581"><a
-            class="md-toc-inner" href="#懲戒烙印-brand-of-castigation">懲戒烙印 Brand of Castigation</a></span><span
-          role="listitem" class="md-toc-item md-toc-h4" data-ref="n1588"><a class="md-toc-inner"
-            href="#觸物知兇-grim-psychometry">觸物知兇 Grim Psychometry</a></span><span role="listitem"
-          class="md-toc-item md-toc-h4" data-ref="n1591"><a class="md-toc-inner" href="#黑暗增幅-dark-augmentation">黑暗增幅
-            Dark Augmentation</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n1593"><a
+          role="listitem" class="md-toc-item md-toc-h4" data-ref="n237"><a class="md-toc-inner"
+            href="#額外攻擊-extra-attack">額外攻擊 Extra Attack</a></span><span role="listitem" class="md-toc-item md-toc-h4"
+          data-ref="n239"><a class="md-toc-inner" href="#懲戒烙印-brand-of-castigation">懲戒烙印 Brand of
+            Castigation</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n241"><a
+            class="md-toc-inner" href="#觸物知兇-grim-psychometry">觸物知兇 Grim Psychometry</a></span><span role="listitem"
+          class="md-toc-item md-toc-h4" data-ref="n243"><a class="md-toc-inner" href="#黑暗增幅-dark-augmentation">黑暗增幅 Dark
+            Augmentation</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n245"><a
             class="md-toc-inner" href="#拘束烙印-brand-of-tethering">拘束烙印 Brand of Tethering</a></span><span role="listitem"
-          class="md-toc-item md-toc-h4" data-ref="n1594"><a class="md-toc-inner" href="#剛毅之魂hardened-soul">剛毅之魂Hardened
-            Soul</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n1595"><a class="md-toc-inner"
+          class="md-toc-item md-toc-h4" data-ref="n247"><a class="md-toc-inner" href="#剛毅之魂hardened-soul">剛毅之魂Hardened
+            Soul</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n249"><a class="md-toc-inner"
             href="#赤血精通sanguine-mastery">赤血精通Sanguine Mastery</a></span><span role="listitem"
-          class="md-toc-item md-toc-h1" data-ref="n1622"><a class="md-toc-inner" href="#化狼之序-order-of-lycan">化狼之序 Order
-            of Lycan</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n1628"><a
-            class="md-toc-inner" href="#增強感官-heightened-senses">增強感官
-            Heightened Senses</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n1644"><a
-            class="md-toc-inner" href="#混種變形-hybrid-transformation">混種變形 Hybrid Transformation</a></span><span
-          role="listitem" class="md-toc-item md-toc-h6" data-ref="n1652"><a class="md-toc-inner"
-            href="#野性之力-feral-might"><strong>野性之力 Feral Might</strong></a></span><span role="listitem"
-          class="md-toc-item md-toc-h6" data-ref="n1661"><a class="md-toc-inner"
+          class="md-toc-item md-toc-h1" data-ref="n252"><a class="md-toc-inner" href="#化狼之序-order-of-lycan">化狼之序 Order
+            of Lycan</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n254"><a
+            class="md-toc-inner" href="#增強感官-heightened-senses">增強感官 Heightened Senses</a></span><span role="listitem"
+          class="md-toc-item md-toc-h4" data-ref="n256"><a class="md-toc-inner" href="#混種變形-hybrid-transformation">混種變形
+            Hybrid Transformation</a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n258"><a
+            class="md-toc-inner" href="#野性之力-feral-might"><strong>野性之力 Feral Might</strong></a></span><span
+          role="listitem" class="md-toc-item md-toc-h6" data-ref="n260"><a class="md-toc-inner"
             href="#堅韌毛皮-resilient-hide"><strong>堅韌毛皮 Resilient Hide</strong></a></span><span role="listitem"
-          class="md-toc-item md-toc-h6" data-ref="n1667"><a class="md-toc-inner"
+          class="md-toc-item md-toc-h6" data-ref="n262"><a class="md-toc-inner"
             href="#掠食打擊-predatory-strikes"><strong>掠食打擊 Predatory Strikes</strong></a></span><span role="listitem"
-          class="md-toc-item md-toc-h6" data-ref="n1672"><a class="md-toc-inner" href="#嗜血-bloodlust"><strong>嗜血
-              Bloodlust</strong></a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n1645"><a
+          class="md-toc-item md-toc-h6" data-ref="n264"><a class="md-toc-inner" href="#嗜血-bloodlust"><strong>嗜血
+              Bloodlust</strong></a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n266"><a
             class="md-toc-inner" href="#追獵造詣-stalkers-prowess">追獵造詣 Stalker's Prowess</a></span><span role="listitem"
-          class="md-toc-item md-toc-h6" data-ref="n1654"><a class="md-toc-inner"
-            href="#進階掠食打擊-improved-predatory-strikes"><strong>進階掠食打擊 Improved Predatory
-              Strikes</strong></a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n1646"><a
-            class="md-toc-inner" href="#高等變形-advanced-transformation">高等變形 Advanced Transformation</a></span><span
-          role="listitem" class="md-toc-item md-toc-h6" data-ref="n1655"><a class="md-toc-inner"
+          class="md-toc-item md-toc-h6" data-ref="n268"><a class="md-toc-inner"
+            href="#進階掠食打擊-improved-predatory-strikes"><strong>進階掠食打擊 Improved Predatory Strikes</strong></a></span><span
+          role="listitem" class="md-toc-item md-toc-h4" data-ref="n270"><a class="md-toc-inner"
+            href="#高等變形-advanced-transformation">高等變形 Advanced Transformation</a></span><span role="listitem"
+          class="md-toc-item md-toc-h6" data-ref="n272"><a class="md-toc-inner"
             href="#狼化再生-lycan-regeneration"><strong>狼化再生 Lycan Regeneration</strong></a></span><span role="listitem"
-          class="md-toc-item md-toc-h4" data-ref="n1647"><a class="md-toc-inner"
-            href="#饕餮烙印-brand-of-the-voracious">饕餮烙印 Brand of the Voracious</a></span><span role="listitem"
-          class="md-toc-item md-toc-h4" data-ref="n1648"><a class="md-toc-inner"
-            href="#精通混種變形-hybrid-transformation-mastery">精通混種變形 Hybrid Transformation Mastery</a></span></p>
+          class="md-toc-item md-toc-h4" data-ref="n274"><a class="md-toc-inner" href="#饕餮烙印-brand-of-the-voracious">饕餮烙印
+            Brand of the Voracious</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n276"><a
+            class="md-toc-inner" href="#精通混種變形-hybrid-transformation-mastery">精通混種變形 Hybrid Transformation
+            Mastery</a></span></p>
     </div>
     <blockquote>
-      <p><span>在飽受各類野獸、魔鬼和迷霧之外可憎之物折磨的土地上，大部分人生活在由黑暗、迷信和未知帶來的恐懼之中。一些人因為這些經歷而變得堅強，進而選擇奮起與陰影之潮戰鬥。</span>
-        <span>這些人們被稱為「英雄」。</span>
-        <span>然而，一部分人狂熱地致力於摧毀那些荼毒世間的可憎之物，以至於擁抱那些黑暗禁忌的知識。爲了更好地瞭解敵人，他們在可疑的、被遺忘的血之儀式上獻祭自己的生命力。他們的理念有時甚至模糊了自己和他們所追獵的邪惡存在的界限，進而讓他們自己的人性也遭到質疑。</span>
-        <span>這些人被稱為「血獵」。</span>
+      <p>
+        <span>一個半獸人傷痕累累，但意志堅定，他面無表情的臉上滴著汗水，在自己傷口的血液中染紅了一根手指，然後在他和麵對他的血腥巨獸之間的空氣中畫了一個發光的紅寶石字樣。他握住這個沒有重量的符號，扭曲它，釋放出黑暗能量流，詛咒怪物自己血管中的血液，以扳平勝負。</span>
+      </p>
+      <p>
+        <span>一個神秘的半精靈披著破舊的斗篷和堅固的皮甲，小心翼翼地調查著公路上的屠殺現場，當她沉思著這可怕的場景的殘餘時，她的眼睛裡閃過一絲認同。突然，她跳了起來，確信知道是什麼生物造成的，在哪裡可以找到它--在它再次殺人之前，她的時間是多麼短暫。</span>
+      </p>
+      <p>
+        <span>踏入無光的房間，裡面充滿了古老的灰塵和纏綿的低語，半身人從附近石頭上的骨頭和爪子的刮擦聲中聽到了危險即將來臨的警告。當她用刀在手掌上劃過時，她會感到疼痛，鋼鐵將血液和精華轉化為強大魔法的發光符文，渴望烙印和燃燒敵人的肉體。</span>
+      </p>
+      <p>
+        <span>獵血人是聰明的戰士，他們被消滅新舊邪惡的無盡決心所驅使。他們以秘密的血魔法儀式為武器，並願意為他們的事業犧牲自己的生命力和人性，他們保護王國免受陰影的影響--即使他們始終保持警惕，防止被吞噬他們所獵殺的怪物的黑暗所吸引。</span>
       </p>
       <h5 id='瞭解敵人首先要成為他們'><span>瞭解敵人，首先要成為他們</span></h5>
       <p>
@@ -91,7 +94,7 @@
             <tr>
               <th><strong><span>等級</span></strong></th>
               <th style='text-align:center;'><strong><span>熟練加值</span></strong></th>
-              <th style='text-align:center;'><strong><span>血咒骰</span></strong></th>
+              <th style='text-align:center;'><strong><span>血源骰</span></strong></th>
               <th style='text-align:center;'><strong><span>已知血咒</span></strong></th>
               <th><strong><span>職業特性</span></strong></th>
             </tr>
@@ -144,7 +147,7 @@
               <td style='text-align:center;'><span>+3</span></td>
               <td style='text-align:center;'><span>1d6</span></td>
               <td style='text-align:center;'><span>2</span></td>
-              <td><span>戰團特性，基礎儀式</span></td>
+              <td><span>血獵秩序特性，基礎儀式</span></td>
             </tr>
             <tr>
               <td><span>8級</span></td>
@@ -172,7 +175,7 @@
               <td style='text-align:center;'><span>+4</span></td>
               <td style='text-align:center;'><span>1d8</span></td>
               <td style='text-align:center;'><span>3</span></td>
-              <td><span>戰團特性</span></td>
+              <td><span>血獵秩序特性</span></td>
             </tr>
             <tr>
               <td><span>12級</span></td>
@@ -200,7 +203,7 @@
               <td style='text-align:center;'><span>+5</span></td>
               <td style='text-align:center;'><span>1d8</span></td>
               <td style='text-align:center;'><span>4</span></td>
-              <td><span>戰團特性</span></td>
+              <td><span>血獵秩序特性</span></td>
             </tr>
             <tr>
               <td><span>16級</span></td>
@@ -221,7 +224,7 @@
               <td style='text-align:center;'><span>+6</span></td>
               <td style='text-align:center;'><span>1d10</span></td>
               <td style='text-align:center;'><span>5</span></td>
-              <td><span>戰團特性</span></td>
+              <td><span>血獵秩序特性</span></td>
             </tr>
             <tr>
               <td><span>19級</span></td>
@@ -295,8 +298,7 @@
       <p><strong><span>增強：</span></strong><span>這個詛咒持續1分鐘。被詛咒的生物可以在每個回合結束時做體質豁免，在成功時結束對自己的詛咒。</span></p>
       <hr />
       <h5 id='暴露血咒'><strong><span>暴露血咒</span></strong></h5>
-      <p>
-        <span>當你在距離你30英尺的範圍內看到的生物受到攻擊或法術的傷害時，你可以利用你的反應來暫時削弱它的抗性。在目標的下一回合結束之前，它會失去對觸發攻擊或法術（包括觸發效果）所造成的所有傷害類型的抵抗。</span>
+      <p><span>當你在距離你30英尺的範圍內看到的生物受到攻擊或法術的傷害時，你可以利用你的反應來暫時削弱它的抗性。在目標的下一回合結束之前，它會失去對觸發攻擊或法術（包括觸發效果）所造成的所有傷害類型的抵抗。</span>
       </p>
       <p><strong><span>增強：</span></strong><span>目標會失去對觸發攻擊或法術的傷害類型的免疫狀態，但取而代之會對這些傷害類型具有抗性，直到下一回合結束。</span></p>
       <hr />
@@ -311,8 +313,7 @@
       <p><strong><span>增強：</span></strong><span>你可以讓被詛咒的生物移動一半的速度，然後給它的攻擊傷害增加等於你的血源屬性調整值（最低+1）。</span></p>
       <hr />
       <h5 id='標記血咒'><strong><span>標記血咒</span></strong></h5>
-      <p>
-        <span>以一個附贈動作，您可以標記一個在距離您30英尺以內看到的生物。直到回合結束，每當你用一把武器擊中被詛咒的生物，而你的武器是處於血紅儀式狀態之下，在確定儀式的額外傷害時，你可以擲出額外的儀式傷害骰。</span>
+      <p><span>以一個附贈動作，您可以標記一個在距離您30英尺以內看到的生物。直到回合結束，每當你用一把武器擊中被詛咒的生物，而你的武器是處於血紅儀式狀態之下，在確定儀式的額外傷害時，你可以擲出額外的儀式傷害骰。</span>
       </p>
       <p><strong><span>增強：</span></strong><span>在回合結束前你對目標發動的下一次攻擊擲骰有優勢。</span></p>
       <hr />
@@ -334,8 +335,8 @@
     <p><span>使用兩把武器戰鬥時，你可以將相應屬性調整值加到第二次攻擊的傷害上。</span></p>
     <h4 id='猩紅儀式-crimson-rite'><span>猩紅儀式 Crimson Rite</span></h4>
     <p><span>第2級時，你學會消耗你的活力來對你的武器釋放猩紅儀式。你從以下的基礎血儀列表中學會一種你所選的血儀。</span>
-      <span>以一個附贈動作，你啟用一種已知血儀來為一把武器注入元素能量，直至你完成下次短休或長休，或在你的回合結束時未有持握該武器。當你啟用一個血儀時，你失去一個血技骰的生命值。</span>
-      <span>在啟用期間，以該武器進行的攻擊造成額外的1d4點所選血儀對應型別的傷害。此傷害視作魔法性傷害，且在你的血獵者等級提升時隨血技骰增加。一把武器同一時間只能接受一次啟用。</span>
+      <span>以一個附贈動作，你啟用一種已知血儀來為一把武器注入元素能量，直至你完成下次短休或長休，或在你的回合結束時未有持握該武器。當你啟用一個血儀時，你失去一個血源骰的生命值。</span>
+      <span>在啟用期間，以該武器進行的攻擊造成額外的1d4點所選血儀對應型別的傷害。此傷害視作魔法性傷害，且在你的血獵者等級提升時隨血源骰增加。一把武器同一時間只能接受一次啟用。</span>
       <span>你在第7級時學會一種額外的基礎血儀，而在14級時學會一種秘傳血儀。</span>
     </p>
     <h5 id='基礎血儀primal-rites'><strong><span>基礎血儀Primal Rites</span></strong></h5>
@@ -357,8 +358,8 @@
       </ul>
     </blockquote>
     <h4 id='血獵者之序-blood-hunter-order'><span>血獵者之序 Blood Hunter Order</span></h4>
-    <p><span>第3級時，你投身於一個血獵者所守護的戒律。你從弒靈之序Order of Ghostslayer、瀆魂之序Order of Profane Soul、異變之序Order of Mutant、化狼之序Order
-        of Lycan中選擇其一。</span></p>
+    <p><span>第3級時，你投身於一個血獵者所守護的戒律。你從弒靈之序Order of Ghostslayer、瀆魂之序Order of Profane Soul、異變之序Order of Mutant、化狼之序Order of
+        Lycan中選擇其一。</span></p>
     <p><span>隨後，你將在第3、第7和、第11級、第15級和第18級時獲得相應的職業特性。</span></p>
     <h4 id='屬性值提升-ability-score-improvement'><span>屬性值提升 Ability Score Improvement</span></h4>
     <p><span>當你達到第4、第8、第12、第16、第19級時，你可以選擇一項屬性值提升2點，或是選擇兩項屬性各提升1點。不過你不能通過該特性讓屬性值超過20。</span></p>
@@ -366,7 +367,7 @@
     <p><span>第5級起，你在自己回合內執行攻擊動作時可以發動兩次攻擊而非一次。</span></p>
     <h4 id='懲戒烙印-brand-of-castigation'><span>懲戒烙印 Brand of Castigation</span></h4>
     <p>
-      <span>第6級起，當你以猩紅儀式特性傷害一個生物時，你可以將一個血技魔法的奧術烙印烙在其上（無需動作）。你始終知道烙印生物對於你的所處方向，且每次烙印生物對你或你5尺內你能看見的生物造成傷害時，烙印生物受到你的智力調整值點心靈傷害（至少1點）。</span>
+      <span>第6級起，當你以猩紅儀式特性傷害一個生物時，你可以將一個血源魔法的奧術烙印烙在其上（無需動作）。你始終知道烙印生物對於你的所處方向，且每次烙印生物對你或你5尺內你能看見的生物造成傷害時，烙印生物受到你的智力調整值點心靈傷害（至少1點）。</span>
       <span>你的烙印持續至你解消它，或者你對另一個生物打上烙印。你的烙印對解除魔法Dispel Magic而言是一個法術，並具有等同於你血獵者等級一半的環位（至多9環）。</span>
       <span>使用此特性后，你必須完成一次短休或長休才能再次使用。</span>
     </p>
@@ -383,7 +384,7 @@
     <h4 id='剛毅之魂hardened-soul'><span>剛毅之魂Hardened Soul</span></h4>
     <p><span>第14級起，你在對抗魅惑或恐懼的豁免檢定中具有優勢。</span></p>
     <h4 id='赤血精通sanguine-mastery'><span>赤血精通Sanguine Mastery</span></h4>
-    <p><span>達到第20級后，你在控制血魔法的造詣上得到磨練，以減輕你的犧牲及增強你的才能。當你為一個血獵者特性投血技骰，你每回合有一次機會重投它，並且選擇使用哪個結果。</span>
+    <p><span>達到第20級后，你在控制血魔法的造詣上得到磨練，以減輕你的犧牲及增強你的才能。當你為一個血獵者特性投血源骰，你每回合有一次機會重投它，並且選擇使用哪個結果。</span>
       <span>此外，當你以猩紅儀式增強的武器攻擊造成重擊，你重新獲得一次已消耗的鮮血降咒特性次數。</span>
     </p>
     <hr />
