--- a/pages/alchemist.html
+++ b/pages/alchemist.html
@@ -3,17 +3,17 @@
     <h1 id='奇械師子職---煉金師-alchemist'><span>奇械師子職 - 煉金師 Alchemist</span></h1>
     <p><strong><span>Homebrew</span></strong></p>
     <div class='md-toc' mdtype='toc'>
-      <p class="md-toc-content" role="list"><span role="listitem" class="md-toc-item md-toc-h1" data-ref="n437"><a
+      <p class="md-toc-content" role="list"><span role="listitem" class="md-toc-item md-toc-h1" data-ref="n129"><a
             class="md-toc-inner" href="#奇械師子職---煉金師-alchemist">奇械師子職 - 煉金師 Alchemist</a></span><span role="listitem"
-          class="md-toc-item md-toc-h4" data-ref="n443"><a class="md-toc-inner"
+          class="md-toc-item md-toc-h4" data-ref="n135"><a class="md-toc-inner"
             href="#本職工具"><strong>本職工具</strong></a></span><span role="listitem" class="md-toc-item md-toc-h4"
-          data-ref="n445"><a class="md-toc-inner" href="#煉金師法術"><strong>煉金師法術</strong></a></span><span role="listitem"
-          class="md-toc-item md-toc-h4" data-ref="n467"><a class="md-toc-inner"
-            href="#實驗性靈藥"><strong>實驗性靈藥</strong></a></span><span role="listitem" class="md-toc-item md-toc-h4"
-          data-ref="n480"><a class="md-toc-inner" href="#煉金術掌握"><strong>煉金術掌握</strong></a></span><span role="listitem"
-          class="md-toc-item md-toc-h4" data-ref="n487"><a class="md-toc-inner"
+          data-ref="n137"><a class="md-toc-inner" href="#煉金師法術"><strong>煉金師法術</strong></a></span><span role="listitem"
+          class="md-toc-item md-toc-h4" data-ref="n159"><a class="md-toc-inner"
+            href="#實驗性靈藥-1"><strong>實驗性靈藥</strong></a></span><span role="listitem" class="md-toc-item md-toc-h4"
+          data-ref="n192"><a class="md-toc-inner" href="#煉金術掌握"><strong>煉金術掌握</strong></a></span><span role="listitem"
+          class="md-toc-item md-toc-h4" data-ref="n196"><a class="md-toc-inner"
             href="#復原藥劑"><strong>復原藥劑</strong></a></span><span role="listitem" class="md-toc-item md-toc-h4"
-          data-ref="n497"><a class="md-toc-inner" href="#化學專家"><strong>化學專家</strong></a></span></p>
+          data-ref="n203"><a class="md-toc-inner" href="#化學專家"><strong>化學專家</strong></a></span></p>
     </div>
     <blockquote>
       <p><span>煉金師是將奇異的原料混合在一起以產生種種新物質的專家，煉金師的創造物能用來延續生命，也能用來奪走生命。煉金術是最古老的奇械師技藝，它的多功能性在戰爭與和平時都長期受到重視。</span></p>
@@ -71,7 +71,7 @@
         </table>
       </figure>
     </blockquote>
-    <h4 id='實驗性靈藥'><strong><span>實驗性靈藥</span></strong></h4>
+    <h4 id='實驗性靈藥-1'><strong><span>實驗性靈藥</span></strong></h4>
     <p><span>從第3級起，每當你完成一次長休，你能在一個你接觸的空瓶中魔法性的製造出一劑實驗性靈藥，在製作時你可以決定這個靈藥的效果。 或者你可以一次製作出兩劑實驗性靈藥，但這兩劑將會以隨機的方式決定效果。 </span>
     </p>
     <p><span>以一個動作，一個生物能自己飲用靈藥，或是將靈藥給一個昏迷的生物飲用。</span></p>
@@ -82,6 +82,45 @@
       <p><span>例: 6級時可製作 : 2瓶指定靈藥 | 4瓶隨機靈藥 | 1瓶指定 + 2瓶隨機靈藥</span></p>
     </blockquote>
     <p><span>你能通過消耗一枚1環或更高環的法術位來製造額外的實驗性靈藥。要這麼做的話，你需要以一個動作接觸一個空燒瓶來製造靈藥，然後從實驗性靈藥表中選擇這劑靈藥的效果。</span></p>
+    <blockquote>
+      <h5 id='實驗性靈藥-2'><strong><span>實驗性靈藥</span></strong></h5>
+      <figure>
+        <table>
+          <thead>
+            <tr>
+              <th><span>d6</span></th>
+              <th><span>效果</span></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><span>1</span></td>
+              <td><span>治療。飲用者恢復2d4+你智力調整值的生命值。</span></td>
+            </tr>
+            <tr>
+              <td><span>2</span></td>
+              <td><span>疾速。飲用者在1小時內速度增加10尺。</span></td>
+            </tr>
+            <tr>
+              <td><span>3</span></td>
+              <td><span>韌性。飲用者在10分鐘內AC+1。</span></td>
+            </tr>
+            <tr>
+              <td><span>4</span></td>
+              <td><span>勇氣。飲用者在1分鐘內，能夠在每個攻擊檢定和豁免檢定中增加一個d4。</span></td>
+            </tr>
+            <tr>
+              <td><span>5</span></td>
+              <td><span>飛行。飲用者在10分鐘內獲得10尺飛行速度。</span></td>
+            </tr>
+            <tr>
+              <td><span>6</span></td>
+              <td><span>變形。飲用者的身體產生如同變造自身的變化。具體怎樣變化由飲用者決定，持續時間10分鐘。</span></td>
+            </tr>
+          </tbody>
+        </table>
+      </figure>
+    </blockquote>
     <h4 id='煉金術掌握'><strong><span>煉金術掌握</span></strong></h4>
     <p>
       <span>在第5級，你對魔法化學物質的掌握變得非常熟練，這將提高你通過煉金物質造成的治療和傷害效果。當你使用煉金工具作為法器施法時，你在法術的一次效果中獲得加值。該效果必須恢復生命值，或是造成強酸、火焰、黯蝕或毒素的傷害擲骰，獲得的加值等於你的智力調整值（最低+1）。</span>
