--- a/index.html
+++ b/index.html
@@ -117,73 +117,7 @@
 
   <div class="container">
     <div id="loading-content">
-      <p>Lorem ipsum dolor sit amet. Et nisi architecto qui blanditiis voluptatum rem adipisci dolore sit quas vitae et
-        autem quia id inventore maxime. Sit internos vero ea inventore quidem aut harum praesentium placeat omnis. A
-        expedita labore aut quia dolores aut nemo error sed sint commodi. </p>
-      <p>Ab ducimus voluptatibus est quaerat quia id fuga molestiae hic excepturi autem. Est cupiditate omnis est quas
-        eaque eos eaque iusto. 33 accusamus officiis id assumenda quasi est distinctio dolor non deleniti repellat qui
-        iusto fugiat ut nesciunt quia ex sunt dolorum. </p>
-      <p>Qui quia similique aut voluptatibus architecto aut voluptatem perspiciatis et consequatur reiciendis eos
-        dignissimos voluptatem eos reiciendis voluptatem et repellendus nobis. Illo totam sed exercitationem alias qui
-        autem dolorem. Vel molestiae consequuntur qui sint consectetur 33 optio consequatur qui rerum consequatur ut
-        molestias tempore qui quia doloremque. Qui dolorem unde est dignissimos aspernatur At libero nihil est
-        laudantium magni ad galisum dolor qui nesciunt soluta qui excepturi voluptatem. </p>
-      <p>Lorem ipsum dolor sit amet. Et nisi architecto qui blanditiis voluptatum rem adipisci dolore sit quas vitae et
-        autem quia id inventore maxime. Sit internos vero ea inventore quidem aut harum praesentium placeat omnis. A
-        expedita labore aut quia dolores aut nemo error sed sint commodi. </p>
-      <p>Ab ducimus voluptatibus est quaerat quia id fuga molestiae hic excepturi autem. Est cupiditate omnis est quas
-        eaque eos eaque iusto. 33 accusamus officiis id assumenda quasi est distinctio dolor non deleniti repellat qui
-        iusto fugiat ut nesciunt quia ex sunt dolorum. </p>
-      <p>Qui quia similique aut voluptatibus architecto aut voluptatem perspiciatis et consequatur reiciendis eos
-        dignissimos voluptatem eos reiciendis voluptatem et repellendus nobis. Illo totam sed exercitationem alias qui
-        autem dolorem. Vel molestiae consequuntur qui sint consectetur 33 optio consequatur qui rerum consequatur ut
-        molestias tempore qui quia doloremque. Qui dolorem unde est dignissimos aspernatur At libero nihil est
-        laudantium magni ad galisum dolor qui nesciunt soluta qui excepturi voluptatem. </p>
-      <p>Lorem ipsum dolor sit amet. Et nisi architecto qui blanditiis voluptatum rem adipisci dolore sit quas vitae et
-        autem quia id inventore maxime. Sit internos vero ea inventore quidem aut harum praesentium placeat omnis. A
-        expedita labore aut quia dolores aut nemo error sed sint commodi. </p>
-      <p>Ab ducimus voluptatibus est quaerat quia id fuga molestiae hic excepturi autem. Est cupiditate omnis est quas
-        eaque eos eaque iusto. 33 accusamus officiis id assumenda quasi est distinctio dolor non deleniti repellat qui
-        iusto fugiat ut nesciunt quia ex sunt dolorum. </p>
-      <p>Qui quia similique aut voluptatibus architecto aut voluptatem perspiciatis et consequatur reiciendis eos
-        dignissimos voluptatem eos reiciendis voluptatem et repellendus nobis. Illo totam sed exercitationem alias qui
-        autem dolorem. Vel molestiae consequuntur qui sint consectetur 33 optio consequatur qui rerum consequatur ut
-        molestias tempore qui quia doloremque. Qui dolorem unde est dignissimos aspernatur At libero nihil est
-        laudantium magni ad galisum dolor qui nesciunt soluta qui excepturi voluptatem. </p>
-      <p>Lorem ipsum dolor sit amet. Et nisi architecto qui blanditiis voluptatum rem adipisci dolore sit quas vitae et
-        autem quia id inventore maxime. Sit internos vero ea inventore quidem aut harum praesentium placeat omnis. A
-        expedita labore aut quia dolores aut nemo error sed sint commodi. </p>
-      <p>Ab ducimus voluptatibus est quaerat quia id fuga molestiae hic excepturi autem. Est cupiditate omnis est quas
-        eaque eos eaque iusto. 33 accusamus officiis id assumenda quasi est distinctio dolor non deleniti repellat qui
-        iusto fugiat ut nesciunt quia ex sunt dolorum. </p>
-      <p>Qui quia similique aut voluptatibus architecto aut voluptatem perspiciatis et consequatur reiciendis eos
-        dignissimos voluptatem eos reiciendis voluptatem et repellendus nobis. Illo totam sed exercitationem alias qui
-        autem dolorem. Vel molestiae consequuntur qui sint consectetur 33 optio consequatur qui rerum consequatur ut
-        molestias tempore qui quia doloremque. Qui dolorem unde est dignissimos aspernatur At libero nihil est
-        laudantium magni ad galisum dolor qui nesciunt soluta qui excepturi voluptatem. </p>
-      <p>Lorem ipsum dolor sit amet. Et nisi architecto qui blanditiis voluptatum rem adipisci dolore sit quas vitae et
-        autem quia id inventore maxime. Sit internos vero ea inventore quidem aut harum praesentium placeat omnis. A
-        expedita labore aut quia dolores aut nemo error sed sint commodi. </p>
-      <p>Ab ducimus voluptatibus est quaerat quia id fuga molestiae hic excepturi autem. Est cupiditate omnis est quas
-        eaque eos eaque iusto. 33 accusamus officiis id assumenda quasi est distinctio dolor non deleniti repellat qui
-        iusto fugiat ut nesciunt quia ex sunt dolorum. </p>
-      <p>Qui quia similique aut voluptatibus architecto aut voluptatem perspiciatis et consequatur reiciendis eos
-        dignissimos voluptatem eos reiciendis voluptatem et repellendus nobis. Illo totam sed exercitationem alias qui
-        autem dolorem. Vel molestiae consequuntur qui sint consectetur 33 optio consequatur qui rerum consequatur ut
-        molestias tempore qui quia doloremque. Qui dolorem unde est dignissimos aspernatur At libero nihil est
-        laudantium magni ad galisum dolor qui nesciunt soluta qui excepturi voluptatem. </p>
-      <p>Lorem ipsum dolor sit amet. Et nisi architecto qui blanditiis voluptatum rem adipisci dolore sit quas vitae et
-        autem quia id inventore maxime. Sit internos vero ea inventore quidem aut harum praesentium placeat omnis. A
-        expedita labore aut quia dolores aut nemo error sed sint commodi. </p>
-      <p>Ab ducimus voluptatibus est quaerat quia id fuga molestiae hic excepturi autem. Est cupiditate omnis est quas
-        eaque eos eaque iusto. 33 accusamus officiis id assumenda quasi est distinctio dolor non deleniti repellat qui
-        iusto fugiat ut nesciunt quia ex sunt dolorum. </p>
-      <p>Qui quia similique aut voluptatibus architecto aut voluptatem perspiciatis et consequatur reiciendis eos
-        dignissimos voluptatem eos reiciendis voluptatem et repellendus nobis. Illo totam sed exercitationem alias qui
-        autem dolorem. Vel molestiae consequuntur qui sint consectetur 33 optio consequatur qui rerum consequatur ut
-        molestias tempore qui quia doloremque. Qui dolorem unde est dignissimos aspernatur At libero nihil est
-        laudantium magni ad galisum dolor qui nesciunt soluta qui excepturi voluptatem. </p>
-
+      <h1>Loading...</h1>
     </div>
   </div>
 
