--- a/index.html
+++ b/index.html
@@ -102,7 +102,13 @@
             <a onclick="getPaging('blood_hunter')" class="nav-link" href="#">血獵者</a>
           </li>
           <li class="nav-item">
+            <a onclick="getPaging('scourge_herald')" class="nav-link" href="#">災厄先驅</a>
+          </li>
+          <li class="nav-item">
             <a onclick="getPaging('alchemist')" class="nav-link" href="#">煉金師 (Homebrew)</a>
+          </li>
+          <li class="nav-item">
+            <a onclick="getPaging('feat')" class="nav-link" href="#">專長</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">其他連結</a>
