--- a/pages/feat.html
+++ b/pages/feat.html
@@ -2,30 +2,30 @@
   <div id='write' class=''>
     <h1 id='專長---homebrew'><span>專長 - Homebrew</span></h1>
     <div class='md-toc' mdtype='toc'>
-      <p class="md-toc-content" role="list"><span role="listitem" class="md-toc-item md-toc-h1" data-ref="n312"><a
+      <p class="md-toc-content" role="list"><span role="listitem" class="md-toc-item md-toc-h1" data-ref="n67"><a
             class="md-toc-inner" href="#專長---homebrew">專長 - Homebrew</a></span><span role="listitem"
-          class="md-toc-item md-toc-h3" data-ref="n385"><a class="md-toc-inner"
-            href="#全能射手"><strong>全能射手</strong></a></span><span role="listitem" class="md-toc-item md-toc-h3"
-          data-ref="n336"><a class="md-toc-inner" href="#頂級掠食者"><strong>頂級掠食者</strong></a></span></p>
+          class="md-toc-item md-toc-h2" data-ref="n71"><a class="md-toc-inner"
+            href="#全能射手"><strong>全能射手</strong></a></span><span role="listitem" class="md-toc-item md-toc-h2"
+          data-ref="n96"><a class="md-toc-inner" href="#頂級掠食者"><strong>頂級掠食者</strong></a></span></p>
     </div>
     <hr />
-    <h3 id='全能射手'><strong><span>全能射手</span></strong></h3>
-    <p><em><span>先決條件：你擁有戰士範型 槍手</span></em></p>
+    <h2 id='全能射手'><strong><span>全能射手</span></strong></h2>
+    <p><em><strong><span>先決條件：你擁有戰士範型 - 槍手</span></strong></em></p>
     <p><span>在你取得這個專長時，從下方四個能力中選擇其中兩項：</span></p>
     <blockquote>
-      <h4 id='靈巧訓練'><strong><span>靈巧訓練</span></strong></h4>
+      <h5 id='靈巧訓練'><strong><span>靈巧訓練</span></strong></h5>
       <p><span>你的敏捷+1</span></p>
-      <h4 id='子彈分裂'><strong><span>子彈分裂</span></strong><span> </span></h4>
+      <h5 id='子彈分裂'><strong><span>子彈分裂</span></strong><span> </span></h5>
       <p>
         <span>你小心翼翼地將武器與刀刃的邊緣對齊，將子彈一分為二，對敵人進行意想不到的打擊。在你以所熟練的遠程武器進行攻擊之前，你可以選擇指定兩個於武器射程之內的目標，兩名目標必須在彼此的5呎之內。該次攻擊檢定承受-5的減值，你的能力可以同時對這兩名目標同時造成影響(例如特技射擊)。</span>
       </p>
-      <h4 id='槍火與劍影'><strong><span>槍火與劍影</span></strong></h4>
+      <h5 id='槍火與劍影'><strong><span>槍火與劍影</span></strong></h5>
       <p><span>你在戰場上戰鬥的經驗讓你擁有靈巧的身法，劍與手槍的靈活配合讓敵人進退兩難。</span></p>
       <ul>
         <li><span>當你一手持有火器，一手持有近戰武器時，你在敵對生物５尺範圍內發動遠程攻擊檢定將不會因此而具有劣勢。</span></li>
         <li><span>當你在一回合內，對同一名敵人同時進行了近戰武器攻擊與遠程武器攻擊，該名敵人將不能對你進行藉機攻擊。</span></li>
       </ul>
-      <h4 id='火炮惡鬼'><strong><span>火炮惡鬼</span></strong><span> </span></h4>
+      <h5 id='火炮惡鬼'><strong><span>火炮惡鬼</span></strong><span> </span></h5>
       <p><span>你知道如何利用雙手火器的特性，讓你可以藉此格擋和偏轉敵人的攻擊，甚至進行靈活的改裝。</span></p>
       <ul>
         <li><span>當你手持雙手火器時，你的AC+1。</span></li>
@@ -34,8 +34,8 @@
       </ul>
     </blockquote>
     <hr />
-    <h3 id='頂級掠食者'><strong><span>頂級掠食者</span></strong></h3>
-    <p><em><span>先決條件：你擁有血獵者戒律 化狼之序</span></em></p>
+    <h2 id='頂級掠食者'><strong><span>頂級掠食者</span></strong></h2>
+    <p><em><strong><span>先決條件：你擁有血獵者戒律 -化狼之序</span></strong></em></p>
     <p><span>你學會了如何提鍊出自然之中各種頂級掠食者的精髓，並精準的將這些精髓加入你的血咒之中。你將這些藥劑隨身配備在你的身邊，在你進行混種變形時可以順手喝下，並讓這些藥品能快速地滲透到你全身。</span></p>
     <ul>
       <li>
@@ -57,16 +57,24 @@
           <p><strong><span>劇毒皮膚:</span></strong><span>
               任何擒抱你、或透過任何其他方式直接碰觸到你的皮膚的生物都必須成功通過一次體質豁免，否則將陷入中毒狀態長達1分鐘。不再直接碰觸你皮膚的中毒生物可以在它的每個回合結束時重複進行這個豁免檢定，豁免成功則結束這個效果對它的影響。</span>
           </p>
-          <h4 id='灰狼'><span>灰狼</span></h4>
+        </blockquote>
+        <blockquote>
+          <h4 id='灰狼'><strong><span>灰狼</span></strong></h4>
           <p><strong><span>野性衝鋒:</span></strong><span>
               當你使用天生武器攻擊時，你可以對目標進行如同灰狼在獵捕時一樣的侵略行為。若目標為一個生物，則它必須成功通過一次力量豁免，否則被擊倒伏地。</span></p>
-          <h4 id='巨脈蜻蜓'><span>巨脈蜻蜓</span></h4>
+        </blockquote>
+        <blockquote>
+          <h4 id='巨脈蜻蜓'><strong><span>巨脈蜻蜓</span></strong></h4>
           <p><strong><span>網狀翅脈:</span></strong><span> 你獲得60呎飛行速度，當你拍打你的翅膀時將發出巨大的聲響，在120呎內的生物將可聽見你的拍翅聲。</span></p>
           <p><strong><span>複眼:</span></strong><span> 當你受傷時，如你能夠看見對你造成傷害的敵人，你可以使用你的反應讓這次的傷害減半。</span></p>
-          <h4 id='霸王龍'><span>霸王龍</span></h4>
+        </blockquote>
+        <blockquote>
+          <h4 id='霸王龍'><strong><span>霸王龍</span></strong></h4>
           <p><strong><span>啃咬:</span></strong><span>
               你的嘴巴將如同霸王龍一般的有力和鋒利，當你進行一次天生武器攻擊時，你可以改為使用嘴巴啃咬敵人。你的天生武器傷害骰多加一顆，同時若目標為一個體型為中型或更小的生物，則它被擒。</span></p>
-          <h4 id='虎鯨'><span>虎鯨</span></h4>
+        </blockquote>
+        <blockquote>
+          <h4 id='虎鯨'><strong><span>虎鯨</span></strong></h4>
           <p><strong><span>回聲定位:</span></strong><span> 你獲得盲視 120 呎，當你在耳聾時不能使用盲視</span>
             <strong><span>屏住呼吸:</span></strong><span> 虎鯨可以屏住呼吸30分鐘</span>
           </p>
